Adjust class references to question CSS classes

--- a/app/assets/stylesheets/components/_collapse.scss
+++ b/app/assets/stylesheets/components/_collapse.scss
@@ -12,7 +12,7 @@
     }
   }
 
-  &.answerbox__question-text {
+  &.question__text {
     max-height: 15rem;
 
     @include media-breakpoint-up('sm') {
