--- a/app/views/actions/_answer.html.haml
+++ b/app/views/actions/_answer.html.haml
@@ -1,13 +1,8 @@
 .dropdown-menu.dropdown-menu-end{ role: :menu }
   - if subscribed_answer_ids&.include?(answer.id)
-    -#                                            fun joke    should subscribe?
-    %a.dropdown-item{ href: "#", data: { a_id: answer.id, action: "ab-submarine", torpedo: "no" } }
-      %i.fa.fa-fw.fa-anchor
-      = t("voc.unsubscribe")
+    = render "subscriptions/destroy", answer: answer
   - else
-    %a.dropdown-item{ href: "#", data: { a_id: answer.id, action: "ab-submarine", torpedo: "yes" } }
-      %i.fa.fa-fw.fa-anchor
-      = t("voc.subscribe")
+    = render "subscriptions/create", answer: answer
   - if privileged? answer.user
     %a.dropdown-item.text-danger{ href: "#", data: { a_id: answer.id, action: "ab-destroy" } }
       %i.fa.fa-fw.fa-trash-o
