Adjust default button styling
Buttons are now slightly wider, include an increased border radius, and the font weight is bold

--- a/app/assets/stylesheets/overrides/_buttons.scss
+++ b/app/assets/stylesheets/overrides/_buttons.scss
@@ -1,5 +1,8 @@
 .btn {
+  --btn-padding-x: 1rem;
+  --btn-border-radius: 2rem;
   color: RGB(var(--body-text));
+  font-weight: bold;
 }
 
 .btn-link:hover {
