--- a/app/assets/stylesheets/overrides/_inputs.scss
+++ b/app/assets/stylesheets/overrides/_inputs.scss
@@ -20,3 +20,12 @@
   background-color: var(--raised-accent);
   border: 0;
 }
+
+.form-check-input:checked {
+  background-color: var(--primary);
+  border-color: var(--primary);
+}
+
+.form-check-input:focus {
+  box-shadow: rgba(var(--primary-rgb), 0.25) 0 0 0 0.25rem;
+}
