--- a/app/views/discover/tab/_answers.html.haml
+++ b/app/views/discover/tab/_answers.html.haml
@@ -1,3 +1,3 @@
 .tab-pane.active.fade.show{ role: :tabpanel, id: "answers" }
   - answers.each do |a|
-    = render "answerbox", a:, subscribed_answer_ids:
+    = render "answerbox", a:, subscribed_answer_ids:, reacted_answer_ids:
