--- a/app/views/discover/tab/_discussed.html.haml
+++ b/app/views/discover/tab/_discussed.html.haml
@@ -1,3 +1,3 @@
 .tab-pane.fade{ role: :tabpanel, id: "comments" }
   - comments.each do |a|
-    = render "answerbox", a:, subscribed_answer_ids:
+    = render "answerbox", a:, subscribed_answer_ids:, reacted_answer_ids:
