--- a/app/views/actions/_share.html.haml
+++ b/app/views/actions/_share.html.haml
@@ -8,5 +8,8 @@
   %a.dropdown-item{ href: telegram_share_url(answer), target: "_blank" }
     %i.fa.fa-fw.fa-telegram
     = t(".telegram")
+  %a.dropdown-item{ href: "#", data: { controller: :share, action: "share#copyToClipboard", share_copy_content_value: answer_copy_content(answer) } }
+    %i.fa.fa-fw.fa-solid.fa-copy
+    = t(".copy")
   %a.dropdown-item{ href: "#", data: { controller: :share, action: "share#share", share_url_value: answer_share_url(answer) } }
     = t(".other")
