--- a/app/views/question/show.html.haml
+++ b/app/views/question/show.html.haml
@@ -8,7 +8,7 @@
     %button.d-none{ data: { hotkey: "j", action: "navigation#down" } }
     %button.d-none{ data: { hotkey: "k", action: "navigation#up" } }
     - @answers.each do |a|
-      = render "answerbox", a:, show_question: false, subscribed_answer_ids: @subscribed_answer_ids, reacted_answer_ids: @reacted_answer_ids
+      = render "answerbox", a:, show_question: false
 
   - if @more_data_available
     .d-flex.justify-content-center.justify-content-sm-start#paginator
