--- a/app/views/modal/_ask.html.haml
+++ b/app/views/modal/_ask.html.haml
@@ -8,6 +8,8 @@
       .modal-body
         - if @user
           .alert.alert-info.d-sm-none= t(".user_note_html", user: @user.profile.safe_name)
+        - if current_user.followers.count.zero?
+          .alert.alert-warning= t(".follower_note_html")
         .form-group.has-feedback
           %textarea.form-control{ name: "qb-all-question", placeholder: t(".placeholder"), data: { "character-count-warning-target": "input" } }
           .alert.alert-warning.mt-3.d-none{ data: { "character-count-warning-target": "warning" } }= t('.long_question_warning')
