Add theme previews

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -14,6 +14,8 @@
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/maps";
 
+$enable-cssgrid: true;
+
 /**
   VENDOR
   ----------------------------------------------
