--- a/app/views/reactions/_create.html.haml
+++ b/app/views/reactions/_create.html.haml
@@ -1,13 +1,19 @@
 - if type == "Answer"
   = button_to create_reactions_path(id: target.id, username: target.user.screen_name),
-              form: { class: "d-inline-block", id: "reaction-#{type}-#{target.id}" },
-              class: "btn btn-link answerbox__action smile" do
+              form: { class: "d-inline-block",
+                      id: "reaction-#{type}-#{target.id}",
+                      data: { controller: :reaction, action: "turbo:submit-start->reaction#disable turbo:submit-end->reaction#enable" } },
+              class: "btn btn-link answerbox__action smile",
+              data: { reaction_target: :button } do
     %i.fa.fa-fw.fa-smile-o
     %span= target.smile_count
 
 - if type == "Comment"
   = button_to create_comment_reactions_path(id: target.id, username: target.user.screen_name),
-              form: { class: "d-inline-block", id: "reaction-#{type}-#{target.id}" },
-              class: "btn btn-link answerbox__action smile" do
+              form: { class: "d-inline-block",
+                      id: "reaction-#{type}-#{target.id}",
+                      data: { controller: :reaction, action: "turbo:submit-start->reaction#disable turbo:submit-end->reaction#enable" } },
+              class: "btn btn-link answerbox__action smile",
+              data: { reaction_target: :button } do
     %i.fa.fa-fw.fa-smile-o
     %span= target.smile_count
