--- a/app/assets/stylesheets/overrides/_inputs.scss
+++ b/app/assets/stylesheets/overrides/_inputs.scss
@@ -32,6 +32,6 @@
 
 .input-group .button_to .btn {
   margin-left: -1px;
-  border-top-left-radius: 0px;
-  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
