Remove report filtering navigation entries

--- a/app/views/tabs/_moderation.html.haml
+++ b/app/views/tabs/_moderation.html.haml
@@ -1,13 +1,6 @@
 .card
   .list-group
-    = list_group_item t(".all"), moderation_reports_path
-    = list_group_item t(".answers"), moderation_reports_path("answer")
-    = list_group_item t(".comments"), moderation_reports_path("comment")
-    = list_group_item t(".users"), moderation_reports_path("user")
-    = list_group_item t(".questions"), moderation_reports_path("question")
-
-.card
-  .list-group
+    = list_group_item t(".reports"), moderation_reports_path
     = list_group_item t(".site_wide_blocks"), mod_anon_block_index_path
 
 .d-none.d-sm-block= render "shared/links"
