Added masto verficiation to base.html.haml

--- a/app/views/layouts/base.html.haml
+++ b/app/views/layouts/base.html.haml
@@ -17,6 +17,7 @@
     %link{ rel: 'icon', href: '/images/favicon/favicon-16.png', sizes: '16x16' }
     %link{ rel: 'icon', href: '/icons/maskable_icon_x192.png', sizes: '192x192' }
     %link{ rel: 'icon', href: '/images/favicon/favicon-32.png', sizes: '32x32' }
+    %link{ rel: 'me', href: 'https://floss.social/@retrospring'}
     %title= yield(:title)
     = stylesheet_link_tag "application", data: { 'turbo-track': "reload" }, media: "all"
     = javascript_include_tag 'application', data: { 'turbo-track': 'reload' }, defer: true
