Fix missing question mark in registrations_enabled? method call

--- a/app/views/application/_questionbox.html.haml
+++ b/app/views/application/_questionbox.html.haml
@@ -51,7 +51,7 @@
                   type: :button,
                   data: {
                     loading_text: t(".load"),
-                    promote: user_signed_in? || !user_signed_in? && !Retrospring::Config.registrations_enabled ? "false" : "true",
+                    promote: user_signed_in? || !user_signed_in? && !Retrospring::Config.registrations_enabled? ? "false" : "true",
                     "character-count-target": "action"
                     }
                 }
